[project]
name = "sharty-downloader"
version = "0.1.4"
description = "Scrapes images off of Vichan"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.14.0",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rtoml>=0.13.0",
    "tqdm>=4.67.3",
    "typed-argparse>=0.3.1",
]
